<resources>
    <string name="app_name">SuperCheap</string>
    <string name="default_greet">Looks like we have a problem</string>
    <string name="title_activity_stam">Stam</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="add_item">add item</string>
    <string name="enter_price">enter price</string>
    <string name="upload">upload</string>
    <string name="enter_sale_item">enter item</string>
    <string name="quantity">Enter Quantity</string>
    <string name="sale_price">Sale price</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="manager_update">Manager Update</string>
    <string name="Item">Choose item</string>
    <string name="add">Add</string>
    <string name="company">Company</string>
    <string name="add_company">add company</string>
    <string name="createcart">CreateCart</string>
    <string name="mycart">Mycart</string>
    <string name="manager_page">Manager Page</string>
    <string name="log_out">Log out</string>
    <string name="review">review</string>
    <string name="menu_drawer_open">Drawer Open</string>
    <string name="menu_drawer_close">Drawer Close</string>

    <string name="title_activity_test">test</string>
    <string name="app_name1">Navigation Drawer</string>
    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="create_cart">Create Cart</string>
    <string name="my_cart">My Cart</string>
    <string name="choose_cart">choose cart</string>
    <string name="title_activity_home_page">homePage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>