<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/create_cart"
            android:title="@string/choose_cart"/>

        <item android:id="@+id/Display_Cheap_Supers"
            android:title="Cheapest Supers "/>
        <item android:id="@+id/get_super_info"
            android:title="super information"/>
        <item android:id="@+id/manager_page"
            android:title="@string/manager_page"/>
        <item android:id="@+id/do_sale"
            android:title="Do Sale"/>
        <item android:id="@+id/delete_sale"
            android:title="Delete Sale"/>
        <item android:id="@+id/DeleteItem"
            android:title="Delete item"/>
        <item android:id="@+id/add_comment"
            android:title="Add comment"/>
        <item android:id="@+id/my_account"
            android:title="My account"/>
        <item android:id="@+id/my_super"
            android:title="My super"/>
        <item android:id="@+id/logout"
            android:title="@string/log_out"/>
    </group>
</menu>