<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/green"

    tools:context=".Manager.ManagerPage">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/Item"
            android:layout_width="95dp"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:text="@string/add_item"
            android:textColor="#212121"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/Price"
            android:layout_width="95dp"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:text="@string/enter_price"
            android:textColor="#212121"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Company" />

        <TextView
            android:id="@+id/Company"
            android:layout_width="95dp"
            android:layout_height="28dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/company"
            android:textColor="#212121"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Item" />

        <EditText
            android:id="@+id/Company_Name"
            android:layout_width="184dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:background="@color/white"
            android:hint="@string/add_company"
            android:inputType="text"
            android:textColorHint="#00838F"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.191"
            app:layout_constraintStart_toEndOf="@+id/Company"
            app:layout_constraintTop_toBottomOf="@+id/Item_Name" />

        <EditText
            android:id="@+id/Item_Name"
            android:layout_width="184dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="68dp"
            android:autofillHints=""
            android:background="@color/white"
            android:hint="@string/add_item"
            android:inputType="text"
            android:textColorHint="#00838F"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Item"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/value_item"
            android:layout_width="184dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:background="@color/white"
            android:hint="@string/enter_price"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textColorHint="#00838F"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.252"
            app:layout_constraintStart_toEndOf="@+id/Price"
            app:layout_constraintTop_toBottomOf="@+id/Company_Name" />


        <Button
            android:id="@+id/buttonEnterPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@android:color/white"
            android:onClick="insert"
            android:text="@string/upload"
            android:textColor="#2E7D32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.78"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/value_item" />



        <TextView
            android:id="@+id/textView"
            android:layout_width="150dp"
            android:layout_height="29dp"

            android:layout_marginTop="4dp"
            android:text="@string/manager_update"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- the root view must be the DrawerLayout -->


</androidx.constraintlayout.widget.ConstraintLayout>