<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sale.SaleView">

    <TextView
        android:id="@+id/SaleItem"
        android:layout_width="95dp"
        android:layout_height="28dp"
        android:layout_marginTop="224dp"
        android:text="@string/enter_sale_item"
        android:textColor="#212121"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/saleItem"
        android:layout_width="95dp"
        android:layout_height="28dp"
        android:layout_marginTop="152dp"
        android:text="Enter sale name"
        android:textColor="#212121"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="95dp"
        android:layout_height="28dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/quantity"
        android:textColor="#212121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PriceQuantity" />

    <TextView
        android:id="@+id/PriceSale"
        android:layout_width="95dp"
        android:layout_height="28dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:text="@string/sale_price"
        android:textColor="#212121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantity" />

    <TextView
        android:id="@+id/PriceQuantity"
        android:layout_width="144dp"
        android:layout_height="37dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="36dp"
        android:text="enter company"
        android:textColor="#212121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SaleItem" />

    <EditText
        android:id="@+id/sale_company_name"
        android:layout_width="201dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:background="@color/white"
        android:hint="add company"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="#00838F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toEndOf="@+id/PriceQuantity"
        app:layout_constraintTop_toBottomOf="@+id/Item_Sale_name" />

    <EditText
        android:id="@+id/Item_Sale_name"
        android:layout_width="201dp"
        android:layout_height="48dp"
        android:layout_marginTop="140dp"
        android:autofillHints=""
        android:background="@color/white"
        android:hint="@string/add_item"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="#00838F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toEndOf="@+id/SaleItem"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/sale_name"
        android:layout_width="201dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:autofillHints=""
        android:background="@color/white"
        android:hint="sale name"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="#00838F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toEndOf="@+id/SaleItem"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/quantity_sale"
        android:layout_width="201dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@color/white"
        android:hint="@string/enter_quantity"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="#00838F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toEndOf="@+id/quantity"
        app:layout_constraintTop_toBottomOf="@+id/sale_company_name" />

    <EditText
        android:id="@+id/PriceSaleInput"
        android:layout_width="201dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@color/white"
        android:hint="@string/enter_price"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        android:textColorHint="#00838F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toEndOf="@+id/PriceSale"
        app:layout_constraintTop_toBottomOf="@+id/quantity_sale" />

    <Button
        android:id="@+id/buttonSale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:backgroundTint="@android:color/white"
        android:onClick="update"
        android:text="@string/upload"
        android:textColor="#2E7D32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PriceSaleInput"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="36dp"
        android:textSize="30dp"
        android:text="SalePage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>